# spotify-podcast-list-fastapi

./: Procfile  README.md  pyproject.toml
spotify_podcast_list_fastapi/: helpers.py  main.py
spotify_podcast_list_fastapi/templates/: layout.html
tests/: test_spotify_podcast_list_fastapi.py
