[tool.poetry]
name = "spotify-podcast-list-fastapi"
version = "0.1.0"
description = ""
authors = ["Billy Zoellers <billy.zoellers@mac.com>"]

[tool.poetry.dependencies]
python = "3.9.10"
fastapi = "^0.73.0"
uvicorn = {extras = ["standard"], version = "^0.17.1"}
spotipy = "^2.19.0"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
