[tool.poetry]
name = "spotify-podcast-list-fastapi"
version = "0.1.0"
description = ""
authors = ["Billy Zoellers <billy.zoellers@mac.com>"]

[tool.poetry.dependencies]
python = "3.10.8"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
spotipy = "^2.19.0"
itsdangerous = "^2.0.1"
Jinja2 = "^3.0.3"
python-dotenv = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
